# SolarTrackingSystem-AWS-IOTCore

./: README.md  Time stream queries.docx
Arduino Code/: servo.ino
solar_tracking/: README.md  pyproject.toml
solar_tracking/solar_tracking/: Solar_ML.py  arduino_data.csv  arduino_data_predictions.csv  main.py
solar_tracking/solar_tracking/.gitignore/: .gitignore
